--- a/src/app/components/home/our-offer/our-offer.component.html
+++ b/src/app/components/home/our-offer/our-offer.component.html
@@ -14,7 +14,7 @@
               <div class="card">
                 <div class="card-body">
                   <img
-                    src="../../../assets/images/label.png"
+                    src="assets/images/label.png"
                     class="offer-icon margin-bottom-1"
                     alt="Offer icon"
                   />
@@ -32,7 +32,7 @@
               <div class="card">
                 <div class="card-body">
                   <img
-                    src="../../../assets/images/speech.png"
+                    src="assets/images/speech.png"
                     class="offer-icon margin-bottom-1"
                     alt="Offer icon"
                   />
@@ -49,7 +49,7 @@
               <div class="card">
                 <div class="card-body">
                   <img
-                    src="../../../assets/images/data.png"
+                    src="assets/images/data.png"
                     class="offer-icon margin-bottom-1"
                     alt="Offer icon"
                   />
@@ -71,7 +71,7 @@
               <div class="card">
                 <div class="card-body">
                   <img
-                    src="../../../assets/images/delivery.png"
+                    src="assets/images/delivery.png"
                     class="offer-icon margin-bottom-1"
                     alt="Offer icon"
                   />
@@ -88,7 +88,7 @@
               <div class="card">
                 <div class="card-body">
                   <img
-                    src="../../../assets/images/alert.png"
+                    src="assets/images/alert.png"
                     class="offer-icon margin-bottom-1"
                     alt="Offer icon"
                   />
@@ -109,7 +109,7 @@
               <div class="card">
                 <div class="card-body">
                   <img
-                    src="../../../assets/images/power.png"
+                    src="assets/images/power.png"
                     class="offer-icon margin-bottom-1"
                     alt="Offer icon"
                   />
