Updated row divs

--- a/src/app/components/company/vacancies/vacancies.component.html
+++ b/src/app/components/company/vacancies/vacancies.component.html
@@ -2,14 +2,14 @@
   id="vacancies"
   class="container-fluid padding-3 padding-bottom-6 padding-top-5 background-color-primary vacancies-div"
 >
-  <div class="row">
+  <div class="row m-0">
     <div class="padding-bottom-2 width-100">
       <h3 class="text-color-light font-weight-bold mb-0 text-center">
         Current vacancies
       </h3>
     </div>
   </div>
-  <div class="row">
+  <div class="row m-0">
     <div class="col-sm">
       <div class="text-color-light text-justify margin-bottom-2">
         <h5 class="font-weight-bold">Firmware Engineer</h5>
@@ -61,7 +61,7 @@
       </div>
     </div>
   </div>
-  <div class="row justify-content-center margin-top-2">
+  <div class="row m-0 justify-content-center margin-top-2">
     <button type="button" class="btn btn-secondary font-weight-bold">
       Apply for a position
     </button>
