--- a/src/app/components/home/home-products/home-products.component.html
+++ b/src/app/components/home/home-products/home-products.component.html
@@ -4,8 +4,8 @@
     class="container-fluid p-0 border-top-secondary border-bottom-secondary"
   >
     <!-- LARGER DISPLAY - SINGLE ROW (not displayed on small screens) -->
-    <div class="row-large">
-      <div class="row height-vp-full-with-header">
+    <div class="row-large m-0">
+      <div class="row m-0 height-vp-full-with-header">
         <div class="col-lg product-col first-col">
           <div
             class="product-content height-100 border-col gradient-background"
@@ -164,9 +164,9 @@
     </div>
 
     <!-- SMALLER DISPLAY - TWO ROWS (not displayed on large screens) -->
-    <div class="row-small">
+    <div class="row-small m-0">
       <!-- FIRST ROW -->
-      <div class="row height-vp-full-with-header">
+      <div class="row m-0 height-vp-full-with-header">
         <div class="col product-col">
           <div
             class="product-content height-100 border-col gradient-background"
@@ -248,7 +248,7 @@
         </div>
       </div>
       <!-- SECOND ROW -->
-      <div class="row height-vp-full-with-header small-display-second-row">
+      <div class="row m-0 height-vp-full-with-header small-display-second-row">
         <div class="col product-col">
           <div
             class="product-content height-100 border-col gradient-background"
