--- a/src/app/components/products/serviceplug/how-it-works/how-it-works.component.html
+++ b/src/app/components/products/serviceplug/how-it-works/how-it-works.component.html
@@ -15,7 +15,7 @@
     />
   </div>
   <div class="container-fluid howItWorks-container">
-    <div class="row" myMatchHeight="howItWorks-step">
+    <div class="row m-0" myMatchHeight="howItWorks-step">
       <div *ngFor="let step of steps" class="col-lg howItWorks-step">
         <div class="card">
           <div class="card-body">
