--- a/src/app/components/home/our-offer/our-offer.component.html
+++ b/src/app/components/home/our-offer/our-offer.component.html
@@ -9,7 +9,7 @@
     <app-tabs>
       <app-tab tabTitle="I'm a Manufacturer">
         <div class="container">
-          <div class="row">
+          <div class="row m-0">
             <div class="col-sm d-flex flex-column align-items-center">
               <div class="card">
                 <div class="card-body">
@@ -66,7 +66,7 @@
       </app-tab>
       <app-tab tabTitle="I'm a Consumer">
         <div class="container">
-          <div class="row">
+          <div class="row m-0">
             <div class="col-sm d-flex flex-column align-items-center">
               <div class="card">
                 <div class="card-body">
