--- a/src/app/components/products/serviceplug/learn-more/learn-more.component.html
+++ b/src/app/components/products/serviceplug/learn-more/learn-more.component.html
@@ -7,7 +7,7 @@
       Manufacturer or consumer, learn more about our solution.
     </h5>
   </div>
-  <div class="row text-center padding-left-2 padding-right-2">
+  <div class="row m-0 text-center padding-left-2 padding-right-2">
     <div class="col margin-bottom-1">
       <button type="button" class="btn btn-secondary font-weight-bold" routerLink="/serviceplug/manufacturers">
         I'm a Manufacturer
