--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="border-top-secondary">
   <div class="container-fluid padding-3 padding-bottom-2">
-    <div class="row">
+    <div class="row m-0">
       <div
         class="col-sm-3 d-flex flex-column text-color-primary-light margin-bottom-1"
       >
