Fixed some things

--- a/src/app/components/company/vacancies/vacancies.component.html
+++ b/src/app/components/company/vacancies/vacancies.component.html
@@ -11,7 +11,7 @@
   </div>
   <div class="row m-0">
     <div class="col-sm">
-      <div class="text-color-light text-justify margin-bottom-2">
+      <div class="text-color-light margin-bottom-2">
         <h5 class="font-weight-bold">Firmware Engineer</h5>
         <ul class="font-weight-bold">
           <li>Starting: April 2020</li>
@@ -36,7 +36,7 @@
     </div>
     <div class="col flex-grow-0"></div>
     <div class="col-sm">
-      <div class="text-color-light text-justify">
+      <div class="text-color-light">
         <h5 class="font-weight-bold">C# Engineer</h5>
         <ul class="font-weight-bold">
           <li>Starting: April 2020</li>
@@ -61,9 +61,9 @@
       </div>
     </div>
   </div>
-  <div class="row m-0 justify-content-center margin-top-2">
-    <button type="button" class="btn btn-secondary font-weight-bold">
-      Apply for a position
-    </button>
+  <div class="row mx-0 justify-content-center margin-top-2">
+    <a type="button" class="btn btn-secondary font-weight-bold" href="mailto:jobs@wifiplug.co.uk?subject=Re%3A%20Current%20Vacancies%20(myma.io)">
+      Apply for a position by email
+    </a>
   </div>
 </div>
