--- a/src/app/components/company/team/team.component.html
+++ b/src/app/components/company/team/team.component.html
@@ -8,7 +8,7 @@
   <div class="container">
     <div class="row m-0">
       <div
-        class="col-auto flex-grow-1 margin-left-2 margin-right-2"
+        class="col-auto p-0 flex-grow-1 margin-left-3 margin-right-3 member-col"
         *ngFor="let m of team"
       >
         <app-team-member [member]="m"></app-team-member>
