--- a/src/app/components/company/team/team.component.scss
+++ b/src/app/components/company/team/team.component.scss
@@ -1,21 +1,9 @@
-/*.team-div {
-  width: fit-content !important;
-}*/
-
-@media (max-width: 576px) {
-  .title-button-div {
-    justify-content: center;
-  }
-}
-
-/*
-@media (min-width: 992px) {
-  .container-fluid {
-    padding-right: 5rem !important;
-  }
-}
-*/
-
 .btn {
   width: fit-content;
+}
+
+@media (max-width: 992px) {
+  .member-col {
+    margin: 0 !important;
+  }
 }
