--- a/src/app/components/products/serviceplug/manufacturers/manufacturers-banner/manufacturers-banner.component.html
+++ b/src/app/components/products/serviceplug/manufacturers/manufacturers-banner/manufacturers-banner.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid p-0 spacing-0 background-color-primary">
-  <div class="row m-0">
+  <div class="row m-0 banner-row">
     <div class="col-lg-8 p-0 image-col">
       <img
         class="width-100 manufacturers-banner-image"
