--- a/src/app/components/products/serviceplug/manufacturers/manufacturers-banner/manufacturers-banner.component.scss
+++ b/src/app/components/products/serviceplug/manufacturers/manufacturers-banner/manufacturers-banner.component.scss
@@ -15,61 +15,81 @@
 }
 
 @media (max-width: 992px) {
-    .manufacturers-banner-right {
-      padding-right: 2rem !important;
-      padding-left: 2rem !important;
-      padding-bottom: 5rem !important;
-      padding-top: 5rem !important;
-    }
-  
-    .text {
-      text-align: center;
-      padding: 0 !important;
-    }
-  
-    .meet-button {
-      margin-top: 1.5rem;
-    }
+  .manufacturers-banner-right {
+    padding-right: 2rem !important;
+    padding-left: 2rem !important;
+    padding-bottom: 5rem !important;
+    padding-top: 5rem !important;
   }
-  
-  @media (max-width: 576px) {
-    .manufacturers-banner-right {
-      padding-left: 2rem !important;
-      padding-right: 2rem !important;
-    }
+
+  .text {
+    text-align: center;
+    padding: 0 !important;
   }
-  
-  .manufacturers-banner-right:after {
-    content: "";
-    position: absolute;
-    width: 150px;
+
+  .meet-button {
+    margin-top: 1.5rem;
+  }
+}
+
+@media (max-width: 992px) {
+  .manufacturers-banner-right {
+    padding-left: 2rem !important;
+    padding-right: 2rem !important;
+  }
+
+  .banner-row {
+    height: 100vh !important;
+  }
+
+  .border-bottom-light {
+    border: none !important;
+  }
+
+  .manufacturers-banner-image {
     height: 100%;
-    right: 100%;
-    z-index: 1;
+    object-position: bottom !important;
   }
-  .manufacturers-banner-right:after {
-    bottom: 0;
-    background: linear-gradient(
-      to left bottom,
-      var(--bg-primary) 50%,
-      transparent 50.3%
-    );
+}
+@media (min-width: 576px) and (max-width: 992px) {
+  .image-col {
+    max-height: 50% !important;
   }
-  .manufacturers-banner-right:before {
-    content: "";
-    position: absolute;
-    width: calc(150px + 0.15rem);
-    height: 100%;
-    right: 100%;
-    z-index: 1;
-    border-right: 0.15rem solid var(--bg-secondary);
+  .manufacturers-banner-image {
+    object-fit: cover !important;
   }
-  .manufacturers-banner-right:before {
-    bottom: 0;
-    background: linear-gradient(
-      to left bottom,
-      var(--bg-secondary) 50%,
-      transparent 50.3%
-    );
-  }
-  
+}
+
+.manufacturers-banner-right:after {
+  content: "";
+  position: absolute;
+  width: 150px;
+  height: 100%;
+  right: 100%;
+  z-index: 1;
+}
+.manufacturers-banner-right:after {
+  bottom: 0;
+  background: linear-gradient(
+    to left bottom,
+    var(--bg-primary) 50%,
+    transparent 50.3%
+  );
+}
+.manufacturers-banner-right:before {
+  content: "";
+  position: absolute;
+  width: calc(150px + 0.15rem);
+  height: 100%;
+  right: 100%;
+  z-index: 1;
+  border-right: 0.15rem solid var(--bg-secondary);
+}
+.manufacturers-banner-right:before {
+  bottom: 0;
+  background: linear-gradient(
+    to left bottom,
+    var(--bg-secondary) 50%,
+    transparent 50.3%
+  );
+}
