--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,15 +18,19 @@ body {
   width: 100%;
 }
 
-@media (min-width: 992px) {
-  .height-vp-full {
-    height: 100vh;
+.height-vp-full {
+  height: 100vh;
+}
+
+@media (max-width: 992px) {
+  h1 {
+    font-size: xx-large !important;
   }
 }
 
 .btn {
   border-radius: 0.5rem !important;
-  box-shadow: 0 .125rem .25rem rgba(0,0,0,.075)!important;
+  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
 }
 .btn-primary {
   background-color: var(--bg-primary) !important;
