Fixed  some things

--- a/src/app/components/products/serviceplug/how-it-works/how-it-works.component.scss
+++ b/src/app/components/products/serviceplug/how-it-works/how-it-works.component.scss
@@ -24,15 +24,13 @@
   padding-right: 0;
 }
 
+.howItWorks-container {
+  padding: 0;
+}
+
 @media (max-width: 992px) {
   .howItWorks-container {
-    padding-left: 0;
     width: auto;
-  }
-
-  .howItWorks-step {
-    //min-height: 20vh;
-    //border: 1px solid red;
   }
 
   .card-body {
