--- a/src/app/components/shared/header/nav-button/nav-button.component.scss
+++ b/src/app/components/shared/header/nav-button/nav-button.component.scss
@@ -30,21 +30,12 @@
   z-index: 1000000;
   background-color: var(--bg-secondary);
   border-radius: 0 0 9999px 9999px;
-  animation: .2s ease-out link-active;
-}
-@keyframes link-active {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
 }
 
 // Small screen version active link
 @media (max-width: 991px) {
   .active:after {
-    width: .3rem;
+    width: 0.3rem;
     height: 100%;
     border-radius: 0 9999px 9999px 0;
   }
