Consumer page content added + fixes

--- a/src/app/components/products/serviceplug/manufacturers/manufacturers-banner/manufacturers-banner.component.html
+++ b/src/app/components/products/serviceplug/manufacturers/manufacturers-banner/manufacturers-banner.component.html
@@ -3,7 +3,7 @@
     <div class="col-lg-8 p-0 image-col">
       <img
         class="width-100 manufacturers-banner-image"
-        src="/assets/images/Dashboard.jpg"
+        src="assets/images/Dashboard.jpg"
       />
     </div>
     <div
