--- a/src/app/components/products/serviceplug/consumers/consumers-info/consumers-info.component.html
+++ b/src/app/components/products/serviceplug/consumers/consumers-info/consumers-info.component.html
@@ -1,4 +1,4 @@
-<div id="manufacturers-anchor" class="container padding-top-5 padding-bottom-5">
+<div id="consumers-anchor" class="container padding-top-5 padding-bottom-5">
   <div class="row m-0">
     <div *ngFor="let info of infoList" class="col-md-4">
       <div class="card border-0">
