banners height fix(100vh+fixes+cached node modules

--- a/src/app/components/company/company-banner/company-banner.component.html
+++ b/src/app/components/company/company-banner/company-banner.component.html
@@ -4,7 +4,7 @@
   <div class="row m-0 height-vp-full">
     <div class="col-lg-7 p-0 image-col">
       <img
-        class="width-100 company-banner-image"
+        class="width-100 company-banner-image height-vp-full"
         src="assets/images/Mindspace_WifiPlug_6006.jpg"
       />
     </div>
