--- a/src/app/components/home/home-banner/home-banner.component.scss
+++ b/src/app/components/home/home-banner/home-banner.component.scss
@@ -9,8 +9,7 @@
 .banner-div {
   background-image: url(src/assets/images/shutterstock_1208917930.jpg);
   background-size: cover;
-  background-position-x: center;
-  height: 100vh;
+  background-position: center;
   width: 100vw;
 }
 
