--- a/src/app/components/home/home-products/home-products.component.html
+++ b/src/app/components/home/home-products/home-products.component.html
@@ -4,7 +4,7 @@
     class="container-fluid p-0 border-top-secondary border-bottom-secondary"
   >
     <!-- LARGER DISPLAY - SINGLE ROW (not displayed on small screens) -->
-    <div class="row-large m-0">
+    <div class="row row-large product-row">
       <div class="row m-0 height-vp-full-with-header">
         <div class="col-lg product-col first-col">
           <div
