--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
 <app-header></app-header>
 
-<router-outlet></router-outlet>
+<!-- WITHOUT ROUTE ANIMATION --><!--
+<div id="content">
+  <router-outlet></router-outlet>
+</div>
+-->
+
+<!-- WITH ROUTE ANIMATION -->
+<div id="content" [@routeAnimations]="prepareRoute(outlet)">
+  <router-outlet #outlet="outlet"></router-outlet>
+</div>
+
+<div class="anchor-ref"></div>
