--- a/src/app/components/company/company-banner/company-banner.component.scss
+++ b/src/app/components/company/company-banner/company-banner.component.scss
@@ -2,10 +2,10 @@
   object-fit: cover;
 }
 
-@media (min-width: 992px) {
+@media (min-width: 992px) {/*
   .company-banner-image {
     height: 100vh;
-  }
+  }*/
 }
 
 @media (max-width: 992px) {
