--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,10 +1,12 @@
-<app-home-banner></app-home-banner>
+<div>
+  <app-home-banner></app-home-banner>
 
-<main>
-  <div id="products-anchor"></div>
-  <app-home-products></app-home-products>
-  <!--<app-how-it-works></app-how-it-works>-->
-  <app-our-offer></app-our-offer>
-</main>
+  <main>
+    <div id="products-anchor"></div>
+    <app-home-products></app-home-products>
+    <!--<app-how-it-works></app-how-it-works>-->
+    <app-our-offer></app-our-offer>
+  </main>
 
-<app-footer></app-footer>
+  <app-footer></app-footer>
+</div>
