--- a/src/app/components/products/serviceplug/manufacturers/manufacturers-banner/manufacturers-banner.component.html
+++ b/src/app/components/products/serviceplug/manufacturers/manufacturers-banner/manufacturers-banner.component.html
@@ -1,22 +1,31 @@
-<div class="container-fluid p-0 spacing-0 background-color-primary">
-  <div class="row m-0 banner-row">
+
+
+<div
+  class="container-fluid p-0 height-vp-full spacing-0 background-color-primary"
+>
+  <div class="row m-0 height-vp-full">
     <div class="col-lg-8 p-0 image-col">
       <img
-        class="width-100 manufacturers-banner-image"
+        class="width-100 manufacturers-banner-image height-vp-full"
         src="assets/images/Dashboard.jpg"
       />
     </div>
     <div
-      class="col-lg-4 padding-right-4 padding-top-4 d-flex flex-column manufacturers-banner-right text-center border-bottom-light"
+      class="col-lg-4 padding-right-5 height-100 d-flex flex-column manufacturers-banner-right text-center"
     >
       <div class="text-color-light">
         <h1 class="font-weight-bold padding-bottom-1">
           Manufacturer benefits
         </h1>
-        <h4 class="padding-bottom-1">
+        <h4 class="padding-bottom-1 text-center">
           Your brand, your customers, your machines, your data, one platform -
           myma.
         </h4>
+
+        <p class="text px-4">
+          Our team is highly motivated, enthusiastic and excited to provide
+          reliable and high quality products to tens of thousands of users.
+        </p>
       </div>
       <div class="margin-top-1">
         <button
