--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="z-index-1">
-  <nav
+  <nav #navbar
     class="fixed-top navbar navbar-expand-lg navbar-light background-color-light shadow-sm"
     data-toggle="collapse"
     data-target=".navbar-collapse.show"
