Updated our offer + other things

--- a/src/app/components/home/home-banner/home-banner.component.scss
+++ b/src/app/components/home/home-banner/home-banner.component.scss
@@ -6,6 +6,10 @@
   }
 }
 
+.myma-title {
+  line-height: 32px;
+}
+
 .banner-div {
   background-image: url(src/assets/images/shutterstock_1208917930.jpg);
   background-size: cover;
