--- a/src/app/components/home/home-products/home-products.component.html
+++ b/src/app/components/home/home-products/home-products.component.html
@@ -164,7 +164,7 @@
     </div>
 
     <!-- SMALLER DISPLAY - TWO ROWS (not displayed on large screens) -->
-    <div class="row-small m-0">
+    <div class="row row-small">
       <!-- FIRST ROW -->
       <div class="row m-0 height-vp-full-with-header">
         <div class="col product-col">
