--- a/src/app/components/home/our-offer/our-offer.component.html
+++ b/src/app/components/home/our-offer/our-offer.component.html
@@ -1,7 +1,7 @@
 <article id="offer-article" class="margin-bottom-6 background-color-light">
-  <div class="padding-left-2 padding-right-2 padding-top-6 padding-bottom-1">
+  <div class="padding-left-2 padding-right-2 padding-top-6 padding-bottom-6 text-center">
     <h3 class="text-color-primary font-weight-bold">Our offer to you...</h3>
-    <h5 class="text-color-secondary">
+    <h5 class="text-color-secondary m-0">
       Consumer or manufacturer, our solution is for you!
     </h5>
   </div>
@@ -10,7 +10,7 @@
       <app-tab tabTitle="I'm a Manufacturer">
         <div class="container">
           <div class="row m-0">
-            <div class="col-sm d-flex flex-column align-items-center">
+            <div class="col-xl d-flex flex-column align-items-center margin-top-3">
               <div class="card">
                 <div class="card-body">
                   <img
@@ -28,7 +28,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm d-flex flex-column align-items-center">
+            <div class="col-xl d-flex flex-column align-items-center margin-top-3">
               <div class="card">
                 <div class="card-body">
                   <img
@@ -45,7 +45,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm d-flex flex-column align-items-center">
+            <div class="col-xl d-flex flex-column align-items-center margin-top-3">
               <div class="card">
                 <div class="card-body">
                   <img
@@ -67,7 +67,7 @@
       <app-tab tabTitle="I'm a Consumer">
         <div class="container">
           <div class="row m-0">
-            <div class="col-sm d-flex flex-column align-items-center">
+            <div class="col-xl d-flex flex-column align-items-center margin-top-3">
               <div class="card">
                 <div class="card-body">
                   <img
@@ -84,7 +84,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm d-flex flex-column align-items-center">
+            <div class="col-xl d-flex flex-column align-items-center margin-top-3">
               <div class="card">
                 <div class="card-body">
                   <img
@@ -105,7 +105,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm d-flex flex-column align-items-center">
+            <div class="col-xl d-flex flex-column align-items-center margin-top-3">
               <div class="card">
                 <div class="card-body">
                   <img
