--- a/src/app/components/products/serviceplug/learn-more/learn-more.component.html
+++ b/src/app/components/products/serviceplug/learn-more/learn-more.component.html
@@ -1,6 +1,6 @@
-<article class="container-fluid p-0 background-color-primary">
+<article class="container-fluid px-0 background-color-primary padding-bottom-6 padding-top-6">
   <div
-    class="padding-left-2 padding-right-2 padding-top-5 padding-bottom-5 d-flex flex-column align-items-center text-color-light"
+    class="padding-left-2 padding-right-2 padding-bottom-3 d-flex flex-column align-items-center text-color-light"
   >
     <h3 class="font-weight-bold">Interested?</h3>
     <h5>
@@ -13,7 +13,7 @@
         I'm a Manufacturer
       </button>
     </div>
-    <div class="col margin-bottom-5">
+    <div class="col">
         <button type="button" class="btn btn-secondary font-weight-bold" routerLink="/serviceplug/consumers">
           I'm a Consumer
         </button>
