--- a/src/app/components/products/serviceplug/serviceplug-banner/serviceplug-banner.component.html
+++ b/src/app/components/products/serviceplug/serviceplug-banner/serviceplug-banner.component.html
@@ -1,9 +1,9 @@
-<div class="img-fluid banner-div shadow-sm">
+<div class="img-fluid banner-div shadow-sm height-vp-full">
   <div
     class="height-100 padding-5 banner-text d-flex flex-column justify-content-center align-items-start"
   >
     <img class="serviceplug-logo" src="assets/images/ServicePlug.png" alt="Serviceplug Logo"/>
-    <h4 class="padding-bottom-1 text-color-light">
+    <h4 class="padding-bottom-1 padding-top-1 text-color-light">
       We detect faults with your appliances, before they happen.
     </h4>
     <button
