--- a/src/app/components/utils/tabs/tabs.component.scss
+++ b/src/app/components/utils/tabs/tabs.component.scss
@@ -10,7 +10,7 @@
 }
 
 .inactive:hover {
-  background-color: var(--bg-secondary) !important;
-  border-color: var(--bg-secondary) !important;
+  background-color: var(--bg-primary-light) !important;
+  border-color: var(--bg-primary-light) !important;
   color: var(--bg-light) !important;
 }
