--- a/src/app/components/home/home-banner/home-banner.component.html
+++ b/src/app/components/home/home-banner/home-banner.component.html
@@ -2,10 +2,10 @@
   <div
     class="height-100 padding-5 banner-text d-flex flex-column justify-content-center align-items-start"
   >
-    <h1 class="font-weight-bold padding-bottom-1 text-color-light">
+    <h1 class="font-weight-bold m-0 text-color-light myma-title">
       The science behind the appliance.
     </h1>
-    <h4 class="padding-bottom-1 text-color-light">
+    <h4 class="padding-bottom-1 padding-top-1 text-color-light">
       We provide both manufacturers and consumers insight into their appliances.
     </h4>
     <button
