--- a/src/app/components/home/our-offer/our-offer.component.scss
+++ b/src/app/components/home/our-offer/our-offer.component.scss
@@ -1,19 +1,19 @@
 @media (min-width: 992px) {
   #offer-article {
-    padding-top: calc(100vh - 80px - 0.6rem);
+    padding-top: calc(100vh - 80px - 0.3rem);
   }
 }
 @media (min-width: 576px) and (max-width: 992px) {
   #offer-article {
-    padding-top: calc((100vh - 80px - 0.6rem)*2);
+    padding-top: calc((100vh - 80px - 0.3rem)*2);
   }
 }
 
 ul {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  text-align: center;
+  padding: 0 !important;
+  margin: 0 !important;
+  list-style: none !important;
+  text-align: center !important;
 }
 
 .card {
@@ -33,4 +33,11 @@ ul {
 
 .card-text {
   color: var(--bg-primary);
+}
+
+.card-body {
+  padding-top: 0 !important;
+  padding-bottom: 0 !important;
+  padding-left: 1rem !important;
+  padding-right: 1rem !important;
 }
