--- a/src/app/components/products/serviceplug/how-it-works/how-it-works.component.scss
+++ b/src/app/components/products/serviceplug/how-it-works/how-it-works.component.scss
@@ -67,7 +67,7 @@
     overflow: visible;
   }
   .card-text {
-    z-index: -1;
+    //z-index: -1;
     height: 0;
     opacity: 0;
     transform: scale(0);
@@ -85,7 +85,7 @@
     height: auto;
     opacity: 1;
     transform: none;
-    transition: 0.2s;
+    transition: 0.3s ease-in-out;
   }
   .col-lg.howItWorks-step:not(:hover) .card-title {
     font-size: xx-large;
@@ -99,7 +99,7 @@
     height: 20.5rem;
     display: flex;
     flex-direction: column;
-    transition: 0.1s;
+    transition: 0.1s ease-in;
   }
   .howItWorks-step:hover {
     flex-grow: 1.5;
