--- a/src/app/components/utils/tabs/tabs.component.html
+++ b/src/app/components/utils/tabs/tabs.component.html
@@ -1,13 +1,15 @@
-<nav class="navbar navbar-expand-lg">
-  <li
-    class="nav-item active btn btn-primary font-weight-bold m-1 flex-grow-1 tab-button"
-    *ngFor="let tab of tabs"
-    (click)="selectTab(tab)"
-    [class.inactive]="!tab.active"
-  >
-    {{ tab.tabTitle }}
-  </li>
-</nav>
+<div class="container">
+  <div class="row m-0 padding-left-1 padding-right-1">
+    <div
+      class="col active btn btn-primary font-weight-bold flex-grow-1 tab-button margin-left-1 margin-right-1"
+      *ngFor="let tab of tabs"
+      (click)="selectTab(tab)"
+      [class.inactive]="!tab.active"
+    >
+      {{ tab.tabTitle }}
+    </div>
+  </div>
+</div>
 
 <div class="container-fluid">
   <ng-content></ng-content>
