--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="z-index-1">
   <nav #navbar
-    class="fixed-top navbar navbar-expand-lg navbar-light background-color-light shadow-sm"
+    class="fixed-top width-vp-full navbar navbar-expand-lg navbar-light background-color-light shadow-sm"
     data-toggle="collapse"
     data-target=".navbar-collapse.show"
   >
@@ -10,7 +10,7 @@
       </a>
     </div>
     <button
-      class="navbar-toggler"
+      class="navbar-toggler m-0"
       type="button"
       data-toggle="collapse"
       data-target="#navbarNav"
