--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@
 
 body {
   overflow-x: hidden !important;
-  //overflow-y: hidden !important;
+  width: 100vw !important;
   background-color: var(--bg-light) !important;
 }
 
