Fixed footer form width

--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -39,16 +39,14 @@
       >
         <h5 class="font-weight-bold text-color-primary">Stay up to date</h5>
         <a>Subscribe to our newsletter for frequent updates.</a>
-        <div>
+        <div class="container-fluid">
           <form
-            class="newsletter-form"
+            class="newsletter-form row"
             name="newsletter-form"
             data-name="Newsletter Form"
           >
-            <div>
-              <input type="email" name="email" />
-              <button>Go</button>
-            </div>
+              <input class="col-8 form-control email-field" type="email" name="email" />
+              <button class="col-4 btn btn-primary email-button">Go</button>
           </form>
         </div>
       </div>
