--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,7 +33,11 @@ body {
   }
 }
 
-.btn {
+.form-control:focus {
+  border-color: var(--bg-primary-light) !important;
+}
+
+.btn, .form-control {
   border-radius: 0.5rem !important;
   box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
 }
