--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -95,7 +95,7 @@
           [text]="'About Us'"
         ></app-nav-button>
         <app-nav-button [route]="'contact'" [text]="'Contact'"></app-nav-button>
-        <div class="full-height background-color-light d-lg-none"></div>
+        <!--<div class="full-height background-color-light d-lg-none"></div>-->
       </app-nav-buttons-container>
     </div>
   </nav>
