header mobile fix

--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -10,7 +10,7 @@
       </a>
     </div>
     <button
-      class="navbar-toggler m-0"
+      class="navbar-toggler"
       type="button"
       data-toggle="collapse"
       data-target="#navbarNav"
