--- a/src/app/components/shared/header/header.component.scss
+++ b/src/app/components/shared/header/header.component.scss
@@ -32,7 +32,7 @@
   .serviceplug-menu-large {
     display: none;
   }
-/*/
+  /*/
   #navbarNav {
     height: 300px !important;
   }*/
@@ -47,7 +47,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: .1rem;
+    width: 0.1rem;
     height: 81%;
     z-index: 1000000;
     background-color: var(--bg-light);
