--- a/src/app/components/shared/header/nav-dropdown/nav-dropdown.component.scss
+++ b/src/app/components/shared/header/nav-dropdown/nav-dropdown.component.scss
@@ -88,16 +88,18 @@
     transform: translateY(-100%);
     transition: 0.2s ease-in-out;
   }
-
-  
 }
 
 // Dropdown links height
 .dropdown {
   height: 100%;
 }
+@media (min-width: 992px) {
+  .dropdown-toggle {
+    height: 100%;
+  }
+}
 .dropdown-toggle {
-  height: 100%;
   justify-content: center;
 }
 .nav-item {
