Header dropdown fix

--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="z-index-1">
   <nav #navbar
-    class="fixed-top width-vp-full navbar navbar-expand-lg navbar-light background-color-light shadow-sm"
+    class="fixed-top navbar navbar-expand-lg navbar-light background-color-light shadow-sm"
     data-toggle="collapse"
     data-target=".navbar-collapse.show"
   >
@@ -95,7 +95,7 @@
           [text]="'About Us'"
         ></app-nav-button>
         <app-nav-button [route]="'contact'" [text]="'Contact'"></app-nav-button>
-        <!--<div class="full-height background-color-light d-lg-none"></div>-->
+        <div class="full-height background-color-light d-lg-none"></div>
       </app-nav-buttons-container>
     </div>
   </nav>
