--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,8 +6,8 @@
 @import "assets/css/shared/scrollbars.scss";
 
 body {
-  overflow-x: hidden !important;
-  width: 100vw !important;
+  //overflow-x: hidden !important;
+  //width: 100vw !important;
   background-color: var(--bg-light) !important;
 }
 
