--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
 
   <main>
     <div id="products-anchor"></div>
-    <!--<app-home-products></app-home-products>-->
+    <app-home-products></app-home-products>
     <!--<app-how-it-works></app-how-it-works>-->
     <app-our-offer></app-our-offer>
   </main>
