Mobile consumers/manufacturers display fix

--- a/src/app/components/home/home-products/home-products.component.html
+++ b/src/app/components/home/home-products/home-products.component.html
@@ -4,7 +4,7 @@
     class="container-fluid p-0 border-top-secondary border-bottom-secondary"
   >
     <!-- LARGER DISPLAY - SINGLE ROW (not displayed on small screens) -->
-    <div class="row row-large product-row">
+    <div class="row mr-0 row-large product-row">
       <div class="row m-0 height-vp-full-with-header">
         <div class="col-lg product-col first-col">
           <div
@@ -164,7 +164,7 @@
     </div>
 
     <!-- SMALLER DISPLAY - TWO ROWS (not displayed on large screens) -->
-    <div class="row row-small">
+    <div class="row mr-0 row-small">
       <!-- FIRST ROW -->
       <div class="row m-0 height-vp-full-with-header">
         <div class="col product-col">
