--- a/src/app/components/products/serviceplug/consumers/consumers-banner/consumers-banner.component.html
+++ b/src/app/components/products/serviceplug/consumers/consumers-banner/consumers-banner.component.html
@@ -4,19 +4,20 @@
       class="col-lg-8 image-col padding-left-2 padding-right-2 z-index-1"
     >
       <div class="row m-0 height-100 align-items-center">
-        <div class="col-4">
+        <div id="consumers-banner-img-1" class="col-4">
           <img
+          
             class="consumers-banner-image img-fluid"
             src="assets/images/Navigation_Drawer_iOS.png"
           />
         </div>
-        <div class="col-4">
+        <div id="consumers-banner-img-2" class="col-4">
           <img
             class="consumers-banner-image img-fluid"
             src="assets/images/Wash_History_Screen_iOS.png"
           />
         </div>
-        <div class="col-4">
+        <div id="consumers-banner-img-3" class="col-4">
           <img
             class="consumers-banner-image img-fluid"
             src="assets/images/Service_Screen_iOS.png"
