--- a/src/app/components/products/serviceplug/manufacturers/manufacturers-banner/manufacturers-banner.component.scss
+++ b/src/app/components/products/serviceplug/manufacturers/manufacturers-banner/manufacturers-banner.component.scss
@@ -35,8 +35,11 @@
 
 @media (max-width: 992px) {
   .manufacturers-banner-right {
-    padding-left: 2rem !important;
     padding-right: 2rem !important;
+    padding-left: 2rem !important;
+    padding-top: 5rem !important;
+    padding-bottom: 5rem !important;
+    height: auto !important;
   }
 
   .banner-row {
@@ -48,7 +51,7 @@
   }
 
   .manufacturers-banner-image {
-    height: 100%;
+    height: 100% !important;
     object-position: bottom !important;
   }
 }
