--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,7 @@
 @import "assets/css/shared/scrollbars.scss";
 
 body {
-  //overflow-x: hidden !important;
+  overflow-x: hidden !important;
   //width: 100vw !important;
   background-color: var(--bg-light) !important;
 }
@@ -19,12 +19,19 @@ body {
   width: 100%;
 }
 
-.width-vp-full {
-  width: 100vw !important;
+@media (min-width: 992px) {
+  .height-vp-full {
+    height: calc(100vh - 80px) !important;
+  }
+}
+@media (max-width: 992px) {
+  .height-vp-full {
+    height: calc(100vh - 74px) !important;
+  }
 }
 
-.height-vp-full {
-  height: calc(100vh - 80px) !important;
+.width-vp-full {
+  width: 100vw !important;
 }
 
 @media (max-width: 992px) {
